# forex_analysis

./: .gitignore  README.md  forex_pair_trading.ipynb  pyproject.toml
src/forex_analysis/: __init__.py  __main__.py  core.py
tests/: test_smoke.py
