[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-analysis"
version = "0.1.0"
description = "Forex market analysis and trading strategy experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "statsmodels",
]

[project.scripts]
forex-analysis = "forex_analysis.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
